pallet no longer spills out of container

--- a/styles.css
+++ b/styles.css
@@ -57,16 +57,7 @@ body {
     margin-top: 20px;
 }
 
-.color {
-    width: 100px;
-    height: 100px;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    font-weight: bold;
-}
+
 #paletteCanvas {
     display: none;
     margin-top: 20px;
